syntax = "proto3";

package ConsoLovers.Ipc.UnitTests;
option csharp_namespace = "ConsoLovers.Ipc.UnitTests.Grpc";

service GreeterService
{
	rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}

message SayHelloRequest 
{    
	string name = 1;
}

message SayHelloResponse 
{    
	string message = 1;
}
